--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "tsc",
     "test": "ts-mocha -n loader=ts-node/esm/transpile-only -p tsconfig.json 'test/*.test.ts'",
     "format": "prettier --write \"src/**/*.ts\"",
-    "dev": "node --loader ts-node/esm/transpile-only src/main.ts",
     "serve": "node build/main.js",
-    "start": "nodemon --exec node --loader ts-node/esm/transpile-only src/main.ts"
+    "start": "node --loader ts-node/esm/transpile-only src/main.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm/transpile-only src/main.ts"
   },
   "nodemonConfig": {
     "ignore": [
