--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,7 +1,10 @@
 name: Format code
 on:
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
+
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -11,7 +14,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: actions/setup-node@v2
         with:
-          node-version: "16.x"
+          node-version: "18.x"
       - run: npm ci
       - run: npm run format
       - name: Commit changes
