--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
-  squad-server-info-discord-bot:
-    container_name: squad-server-info-discord-bot
-    image: squad-server-info-discord-bot
+  squad-server-info-dc-bot:
+    container_name: squad-server-info-dc-bot
+    image: squad-server-info-dc-bot
     build: .
     restart: unless-stopped
     environment:
@@ -10,9 +10,9 @@ services:
       - "DISCORD_GUILD=${DISCORD_GUILD}"
       - "DISCORD_SERVER_INFO_CHANNEL=${DISCORD_SERVER_INFO_CHANNEL}"
       - "DISCORD_MESSAGE_UPDATE_INTERVAL_SEC=${DISCORD_MESSAGE_UPDATE_INTERVAL_SEC}"
+      - "DISCORD_AUTHORIZED_ROLES=${DISCORD_AUTHORIZED_ROLES}"
       - "LOGGING_LEVEL=${LOGGING_LEVEL}"
       - "LOGGING_FORMAT=${LOGGING_FORMAT}"
-      - "STORAGE_PATH=${STORAGE_PATH}"
     volumes:
       - squad-server-info-dc-bot-vol:/home/node/app/storage
     networks:
