--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -10,6 +10,7 @@ services:
       - "DISCORD_SERVER_INFO_CHANNEL=${DISCORD_SERVER_INFO_CHANNEL}"
       - "DISCORD_MESSAGE_UPDATE_INTERVAL_SEC=${DISCORD_MESSAGE_UPDATE_INTERVAL_SEC}"
       - "DISCORD_AUTHORIZED_ROLES=${DISCORD_AUTHORIZED_ROLES}"
+      - "DISCORD_TIME_ZONE=${DISCORD_TIME_ZONE}"
       - "LOGGING_LEVEL=${LOGGING_LEVEL}"
       - "LOGGING_FORMAT=${LOGGING_FORMAT}"
     volumes:
