Add time zone env variable to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "DISCORD_SERVER_INFO_CHANNEL=000000000000000000"
       - "DISCORD_MESSAGE_UPDATE_INTERVAL_SEC=15"
       - "DISCORD_AUTHORIZED_ROLES=000000000000000001,000000000000000002"
+      - "DISCORD_TIME_ZONE=Europe/Berlin"
       - "LOGGING_LEVEL=debug"
       - "LOGGING_FORMAT=default"
 
