--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "test": "ts-mocha -n loader=ts-node/esm/transpile-only -p tsconfig.json 'test/*.test.ts'",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "format": "prettier --write \"(src|test)/**/*.ts\"",
     "serve": "node build/main.js",
     "start": "node --loader ts-node/esm/transpile-only src/main.ts",
     "dev": "nodemon --exec node --loader ts-node/esm/transpile-only src/main.ts"
