--- a/.github/workflows/test-and-format.yml
+++ b/.github/workflows/test-and-format.yml
@@ -1,9 +1,20 @@
-name: Format code
+name: Test & format code
 on:
   pull_request:
     branches: [main]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - run: npm ci
+      - run: npm test
+
   format:
     runs-on: ubuntu-latest
     steps:
