--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "squad-server-info-discord-bot",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Discord Bot to show squad server information",
+  "author": "Mikerosoft25",
+  "homepage": "https://github.com/WeLoveSquad/squad-server-info-discord-bot#readme",
+  "url": "https://github.com/WeLoveSquad/squad-server-info-discord-bot/issues",
+  "license": "MIT",
   "type": "module",
   "main": "build/main.js",
   "scripts": {
@@ -23,7 +27,6 @@
     "typescript",
     "squad"
   ],
-  "author": "Mikerosoft25",
   "dependencies": {
     "@discordx/importer": "^1.1.10",
     "@fabricio-191/valve-server-query": "^4.1.8",
