Use RCON connection to retrieve player infos

--- a/config/custom-environment-variables.json5
+++ b/config/custom-environment-variables.json5
@@ -3,6 +3,9 @@
     botToken: "DISCORD_BOT_TOKEN",
     authorizedRoles: "DISCORD_AUTHORIZED_ROLES",
   },
+  squad: {
+    servers: "SQUAD_SERVERS",
+  },
   logging: {
     level: "LOGGING_LEVEL",
     format: "LOGGING_FORMAT",
