--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -14,10 +14,12 @@ services:
       - squad-server-info-dc-bot-vol:/home/node/app/settings
     networks:
       - proxy
+    labels:
+      - "networking.default-gateway=${GATEWAY_ADRESS}"
     logging:
       driver: gelf
       options:
-        gelf-address: "udp://172.18.0.17:12201"
+        gelf-address: "${GELF_ADDRESS}"
 
 networks:
   proxy:
