--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -13,15 +13,20 @@ services:
     volumes:
       - squad-server-info-dc-bot-vol:/home/node/app/settings
     networks:
-      - proxy
+      traefik-static-wan-ip87:
+        ipv4_address: ${TRAEFIK_IPV4_ADDRESS}
+      proxy:
     labels:
-      - "networking.default-gateway=${GATEWAY_ADRESS}"
+      - "networking.default-gateway=${GATEWAY_ADDRESS}"
     logging:
       driver: gelf
       options:
         gelf-address: "${GELF_ADDRESS}"
 
 networks:
+  networks:
+    traefik-static-wan-ip87:
+      external: true
   proxy:
     external: true
 
