--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc",
     "test": "ts-mocha -n loader=ts-node/esm/transpile-only -p tsconfig.json 'test/**/*.test.ts' --exit",
     "format": "prettier --write \"(src|test)/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint \"{src,test}/**/*.ts\"",
     "preversion": "npm run lint && npm run test",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -52,16 +52,19 @@
     "@types/luxon": "^3.2.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.5"
   }
 }
