--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc",
     "test": "ts-mocha -n loader=ts-node/esm/transpile-only -p tsconfig.json 'test/**/*.test.ts' --exit",
     "format": "prettier --write \"(src|test)/**/*.ts\"",
-    "lint": "eslint \"{src,test}/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts\"",
     "preversion": "npm run lint && npm run test",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -25,6 +25,9 @@
       "settings/*"
     ]
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
     "discord",
     "bot",
@@ -32,13 +35,12 @@
     "squad"
   ],
   "dependencies": {
-    "@discordx/importer": "^1.1.10",
+    "@discordx/importer": "^1.2.1",
     "@fabricio-191/valve-server-query": "^4.1.9",
-    "@sapphire/shapeshift": "^3.8.1",
     "config": "^3.3.9",
-    "discord.js": "^14.7.1",
-    "discordx": "^11.7.0",
-    "luxon": "^3.2.1",
+    "discord.js": "^14.9.0",
+    "discordx": "^11.7.4",
+    "luxon": "^3.3.0",
     "rcon": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
@@ -48,23 +50,23 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/config": "^3.3.0",
-    "@types/expect": "^24.3.0",
-    "@types/luxon": "^3.2.0",
+    "@types/luxon": "^3.3.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.13.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.4",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4"
   }
 }
