--- a/docker-compose-portainer.yml
+++ b/docker-compose-portainer.yml
@@ -15,7 +15,7 @@ services:
     networks:
       traefik-static-wan-ip87:
         ipv4_address: ${TRAEFIK_IPV4_ADDRESS}
-      proxy:
+      proxy-static:
     labels:
       - "networking.default-gateway=${GATEWAY_ADDRESS}"
     logging:
@@ -26,7 +26,7 @@ services:
 networks:
   traefik-static-wan-ip87:
     external: true
-  proxy:
+  proxy-static:
     external: true
 
 volumes:
