Add Squad v7 compatibility

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - "DISCORD_BOT_TOKEN=CHANGE_ME"
       - "DISCORD_AUTHORIZED_ROLES=000000000000000001,000000000000000002"
-      - "SQUAD_SERVERS=11.22.33.44:27165,55.66.77.88:27165:12345:password"
+      - "SQUAD_SERVERS=11.22.33.44:54321:password1,55.66.77.88:12345:password2"
       - "LOGGING_LEVEL=debug"
       - "LOGGING_FORMAT=default"
 
