--- a/package.json
+++ b/package.json
@@ -35,37 +35,37 @@
     "squad"
   ],
   "dependencies": {
-    "@discordx/importer": "^1.2.3",
-    "@fabricio-191/valve-server-query": "^4.1.9",
+    "@discordx/importer": "^1.3.0",
     "config": "^3.3.9",
-    "discord.js": "^14.13.0",
-    "discordx": "^11.7.6",
-    "luxon": "^3.4.3",
-    "reflect-metadata": "^0.1.13",
+    "discord.js": "^14.14.1",
+    "discordx": "^11.9.0",
+    "luxon": "^3.4.4",
+    "reflect-metadata": "^0.1.14",
+    "steam-server-query": "^1.1.3",
     "tsyringe": "^4.8.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.9",
-    "@types/chai-as-promised": "^7.1.7",
-    "@types/config": "^3.3.2",
-    "@types/luxon": "^3.3.3",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@types/chai": "^4.3.11",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/config": "^3.3.3",
+    "@types/luxon": "^3.3.7",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "mocha": "^10.2.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
     "ts-mocha": "^10.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
