--- a/config/default.json5
+++ b/config/default.json5
@@ -5,8 +5,8 @@
   },
   squad: {
     // Comma separated string of servers in the format:
-    // <IP>:<Quer-Port> OR <IP>:<Quer-Port>:<RCON-Port>:<RCON-Password>
-    servers: "11.22.33.44:27165,55.66.77.88:27165:12345:password",
+    // <IP>:<RCON-Port>:<RCON-Password>
+    servers: "11.22.33.44:54321:password1,55.66.77.88:27165:12345:password2",
   },
   logging: {
     level: "debug",
