--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "build/main.js",
   "scripts": {
     "build": "tsc",
-    "test": "ts-mocha -n loader=ts-node/esm/transpile-only -p tsconfig.json 'test/**/*.test.ts' --exit",
+    "test": "ts-mocha -n loader=ts-node/esm/transpile-only -p tsconfig.json ./test/**/*.test.ts --exit",
     "format": "prettier --write \"(src|test)/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\"",
     "preversion": "npm run lint && npm run test",
@@ -26,7 +26,7 @@
     ]
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=24.0.0"
   },
   "keywords": [
     "discord",
@@ -35,37 +35,38 @@
     "squad"
   ],
   "dependencies": {
-    "@discordx/importer": "^1.3.0",
-    "config": "^3.3.9",
-    "discord.js": "^14.14.1",
-    "discordx": "^11.9.0",
-    "luxon": "^3.4.4",
-    "reflect-metadata": "^0.1.14",
+    "@discordx/importer": "^1.3.3",
+    "config": "^4.1.1",
+    "discord.js": "^14.25.1",
+    "discordx": "^11.13.3",
+    "luxon": "^3.7.2",
+    "reflect-metadata": "^0.2.2",
     "steam-server-query": "^1.1.3",
-    "tsyringe": "^4.8.0",
-    "winston": "^3.11.0"
+    "tsyringe": "^4.10.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/chai-as-promised": "^7.1.8",
-    "@types/config": "^3.3.3",
-    "@types/luxon": "^3.3.7",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
-    "ts-mocha": "^10.0.0",
+    "@eslint/js": "^9.39.2",
+    "@types/chai": "^5.2.3",
+    "@types/chai-as-promised": "^8.0.2",
+    "@types/config": "^3.3.5",
+    "@types/luxon": "^3.7.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^24.10.4",
+    "chai": "^6.2.1",
+    "chai-as-promised": "^8.0.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
+    "mocha": "^11.7.5",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.4",
+    "ts-mocha": "^11.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0"
   }
 }
